[workspace]
members = ["lib-rpc", "lib-rpc/rpc-router-macros"]

[package]
name = "tide-json-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-router = { path = "lib-rpc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-std = { version = "1.12.0", features = ["attributes"] }

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.
