[package]
name = "rpc-router"
version = "0.1.4-WIP"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JSON RPC Router Library"
keywords = ["rpc", "json-rpc"]
homepage = "https://github.com/jeremychone/rust-rpc-router"
repository = "https://github.com/jeremychone/rust-rpc-router"

[lints]
workspace = true

[lib]
doctest = false

[features]
default = ["rpc-router-macros"]

[dependencies]
# -- Async
futures = "0.3"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Features
rpc-router-macros = { version = "0.1.0", path = "rpc-router-macros", optional = true }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-std = { version = "1.12.0", features = ["attributes"] }


[dev-dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- for examples
thiserror = "1"
